# Pet-To

./: .dockerignore  .gitignore  Dockerfile  README.md  env_ai_before_idm_vton.txt  main.py  requirements.txt  test_client.py  vton_pipeline.ipynb  vton_pipeline.py
.claude/: settings.local.json
AI/: main.ipynb  main.py  test_client.ipynb  test_client.py  vton_pipeline.ipynb  vton_pipeline.py
IDM-VTON/: inference_pet_delta.py
backend_worker/: cost_benchmark.py  nanobanana_client.py  quality_gate.py  run_nanobanana_only.py  run_pet_tryon.py
clothes-images/: crawl_images.ipynb
detectron2/tools/deploy/: CMakeLists.txt  README.md  run_end_to_end.sh  run_torchscript_mask_rcnn.sh
pet-images/: convert_yolo_labels_to_jsonl.ps1  organize_cat_dog_images.py  visualize.ipynb  visualize.py
pet-images/yolo_outputs/cat2/: labels.jsonl
pet-images/yolo_outputs/cat2/labels/: Abyssinian_6.txt  Abyssinian_7.txt  Abyssinian_8.txt  Abyssinian_9.txt  Bengal_6.txt  Bengal_7.txt  Bengal_8.txt  Bengal_9.txt  Birman_5.txt  Birman_6.txt  Birman_7.txt  Birman_8.txt  Birman_9.txt  Bombay_5.txt  Bombay_6.txt  Bombay_7.txt  Bombay_8.txt  Bombay_9.txt  British_Shorthair_10.txt  British_Shorthair_15.txt  British_Shorthair_16.txt  British_Shorthair_9.txt  Egyptian_Mau_5.txt  Egyptian_Mau_6.txt  Egyptian_Mau_7.txt  Egyptian_Mau_8.txt  Maine_Coon_6.txt  Maine_Coon_7.txt  Maine_Coon_8.txt  Maine_Coon_9.txt  Persian_5.txt  Persian_6.txt  Persian_7.txt  Persian_8.txt  Ragdoll_5.txt  Ragdoll_6.txt  Ragdoll_7.txt  Ragdoll_8.txt  Russian_Blue_12.txt  Russian_Blue_14.txt  (+9 more)
runtime/jobs/393314a27d84/dataset/: test_pairs.txt
runtime/jobs/393314a27d84/dataset/test/: vitonhd_test_tagged.json
test_outputs/: cost_benchmark_100.json
tools/: make_animal_densepose.py  make_pet_gsam_masks.py  refine_pet_agnostic_mask.py
